feat: 更新项目依赖和Kubernetes资产提供者优化